improve chart app design